PROJ2/E-2.5.102-Grid/wdir_msg/compile.err

Grid.java:72: error: missing return statement
    } 
    ^
1 error


